--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "my-app",
+    "name": "Cipher",
     "slug": "app-development",
     "version": "1.0.0",
     "orientation": "portrait",
